menu and home page visual improvements * fix spacing in prime text in topics menu * fix wording in related products, in case there are no related products * remove top border on topic index * make whole trail map area a link * better columns in dropdown * dropdowns flush right with button * fix mobile dropdown problem

--- a/app/assets/stylesheets/_topics.scss
+++ b/app/assets/stylesheets/_topics.scss
@@ -130,6 +130,10 @@ body.topics-index {
     max-width: 760px;
     padding: 2em;
 
+    .text-box {
+      border-top: 0;
+    }
+
     hr {
       margin-bottom: 2em;
     }
@@ -137,6 +141,7 @@ body.topics-index {
     h2 {
       margin-bottom: 0;
       padding-bottom: 6px;
+      color: $learnred;
     }
 
     ul {
